2008-06-18  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (CheckDocumentData): Added a new way to find the
	proper entry to check data. We check on all the entries on the wnd
	passed using wnd parameter.

	* utils.c (clean_container): Adde g_free and g_list_free to the
	widget_name and list.

2008-06-17  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (on_partial_cell_renderer_edited): Added function edit
	a cell_renderer on partial ingress treeviews.
	(on_button_ok_ingress_clicked): Added
	on_partial_cell_renderer_edited as handler for signal edited on
	"Cant. Ing." column renderer for partial invoice and guide ingress.
	(CambiarStock): Deleted function.
	(on_btn_ok_ingress_partial_guide_clicked)
	(on_btn_ok_ingress_partial_invoice_clicked): Added function.

2008-06-16  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (AskPagarCaja): Deleted function.
	(PagarDocumentoWin, ClosePagarDocumentoWin, PagarToggle): Deleted function
	(on_btn_pay_invoice_clicked): Created function to deal with
	clicked action and pay an invoice.
	(Pagar): Deleted function.
	(FillPartialTree): Added function to fill treeview on partial
	ingress for guide an invoices.

	* postgres-functions.c (PagarFactura): Commented code that insert
	data into "pagos" table. Deleted previous parameters and just use
	id_invoice to update an invoice.

	* compras.c (CalcularTotalesGuias): Changed to use the new tables
	guias_compra_detalle and guias_compra.

2008-06-15  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (ClearPagosData): Deleted Function.
	(on_btn_ok_srch_provider_clicked): Added var tab and guide to know
	in what tab we are so we can know if we'll set on guide or invoice
	labels.
	(on_entry_guide_invoice_provider_activate): Changed from
	on_entry_guide_invoice_activate().
	(on_entry_invoice_provider_activate): Silly function that use
	on_entry_guide_invoice_provider_activate() to show up the search
	provider window.
	(compras_win): Added store to tree_view_invoice_list treeview.